--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kites Immigration & Visa Consultancy</title>
-    <link rel="icon"  href="WhatsApp Image 2024-07-27 at 1.49.21 PM.jpeg"> </link>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://kitesimmigration.com/images/logo.png">
 </head>
 <body>
     <div class="flex-container">
-
+        <nav>
+            <ul id="nav">
+                <li><img src="https://kitesimmigration.com/images/logo.png" alt="logo" width="250px" id="logo"></li>
+            </ul>
+        </nav>
     </div>
 </body>
 </html>
