--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,18 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://kitesimmigration.com/images/logo.png">
 </head>
+
 <body>
     <div class="flex-container">
         <nav>
             <ul id="nav">
                 <li><img src="https://kitesimmigration.com/images/logo.png" alt="logo" width="250px" id="logo"></li>
+                <li>Student Visa</li>
+                <li>Immigration Visa</li>
+                <li>Visitor Visa</li>
             </ul>
         </nav>
     </div>
 </body>
+
 </html>
