--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 
 <body>
     <div class="flex-container">
-        <nav>
-            <ul id="nav">
-                <li><img src="https://kitesimmigration.com/images/logo.png" alt="logo" width="250px" id="logo"></li>
-                <li>Student Visa</li>
-                <li>Immigration Visa</li>
-                <li>Visitor Visa</li>
-            </ul>
-        </nav>
+        <ul id="nav">
+            <img src="https://kitesimmigration.com/images/logo.png" alt="logo" width="250px" id="logo">
+            <b id="sv">Student Visa</b>
+            <b id="iv">Immigration Visa</b>
+            <b id="vv">Visitor Visa</b>
+        </ul>
     </div>
 </body>
 
