--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <b id="sv">Student Visa</b>
             <b id="iv">Immigration Visa</b>
             <b id="vv">Visitor Visa</b>
+            <button type="button" id="bt">Get Consultaion</button>
         </ul>
     </div>
 </body>
