--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <img src="https://kitesimmigration.com/images/logo.png" alt="logo" width="250px" id="logo">
     <div class="flex-container">
+        <img src="https://kitesimmigration.com/images/logo.png" alt="logo" width="250px" id="logo">
         <ul id="nav">
             <b id="sv">Student Visa</b>
             <b id="iv">Immigration Visa</b>
@@ -19,6 +19,10 @@
             <button type="button" id="bt">Get Consultaion</button>
         </ul>
     </div>
+<div class="flex-container1">
+
+</div>
+
 </body>
 
 </html>
