--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <button type="button" id="bt">Get Consultaion</button>
         </ul>
     </div>
-<div class="flex-container1">
-
-</div>
+<div id="t1">get</div>
+<div id="t2">study</div>
+<div id="t3">abroad</div>
 
 </body>
 
