--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 <div id="t1">get</div>
 <div id="t2">study</div>
 <div id="t3">abroad</div>
+<div id="t4">
+ <p> Kites Immigration offers a  window solution to growing needs of each family. Covering every area of Student visa, Immigration & Visitor Visa - offering better guidance for further studies to permanent settlement(PR) in foreign  countries.</p> 
+</div>
 </div>
 </body>
 
