--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <div id="t2">study</div>
 <div id="t3">abroad</div>
 <div id="t4">
- <p> Kites Immigration offers a  window solution to growing needs of each family. Covering every area of Student visa, Immigration & Visitor Visa - offering better guidance for further studies to permanent settlement(PR) in foreign  countries.</p> 
+  Kites Immigration offers a  window solution to growing needs of each family. Covering every area of Student visa, Immigration & Visitor Visa - offering better guidance for further studies to permanent settlement(PR) in foreign  countries.
+ <img src="https://kitesimmigration.com/images/banner.jpg" alt="pic" id="p1" >
 </div>
 </div>
 </body>
