--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             <button type="button" id="bt">Get Consultaion</button>
         </ul>
     </div>
-    <div class="flex-container1">
-        <div id="t1">get</div>
-        <div id="t2">study</div>
-        <div id="t3">abroad</div>
-        <div id="t4">
-            Kites Immigration offers a window solution to growing needs of each family. Covering every area of Student
-            visa, Immigration & Visitor Visa - offering better guidance for further studies to permanent settlement(PR)
-            in foreign countries.
-        </div>
-
+    <div id="t1">get</div>
+    <div id="t2">study</div>
+    <div id="t3">abroad</div>
+    <div id="t4">
+        Kites Immigration offers a window solution to growing needs of each family. Covering every area of Student
+        visa, Immigration & Visitor Visa - offering better guidance for further studies to permanent settlement(PR)
+        in foreign countries.
+    </div>
+    <div>
+        <img src="https://kitesimmigration.com/images/banner.jpg" alt="ki" id="t5">
     </div>
 </body>
 
