--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         in foreign countries.
     </div>
     <div>
-        <img src="https://kitesimmigration.com/images/banner.jpg" alt="ki" id="t5">
+        <button id="b1">Read More</button>
+    </div>
+    <div>
     </div>
 </body>
 
