--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Kites Immigration & Visa Consultancy</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://kitesimmigration.com/images/logo.png">
+    <link rel="stylesheet" href="p2.css">
 </head>
 
 <body>
@@ -31,6 +32,14 @@
         <button id="b1">Read More</button>
     </div>
     <div>
+        <h1 id="tit">your success is <br> our business</h1>
+    </div>
+    <div>
+        <h2 id="au">About Us</h2>
+        <div id="p">Kites Immigration is one of the leading firms catering all the solutions related to the foreign
+            travel under one platform.With our expert team and experiences we are able to fulfill requirements of
+            numerous clients in the areas like Student visa,immigration ,permanent settlement or just a visting to
+            foreign countries.</div>
     </div>
 </body>
 
