--- a/index.html
+++ b/index.html
@@ -20,19 +20,27 @@
             <button type="button" id="bt">Get Consultaion</button>
         </ul>
     </div>
-    <div id="t1">get</div>
-    <div id="t2">study</div>
-    <div id="t3">abroad</div>
-    <div id="t4">
-        Kites Immigration offers a window solution to growing needs of each family. Covering every area of Student
+
+    <!-- <div id="t4"> -->
+    <!-- Kites Immigration offers a window solution to growing needs of each family. Covering every area of Student
         visa, Immigration & Visitor Visa - offering better guidance for further studies to permanent settlement(PR)
         in foreign countries.
     </div>
     <div>
         <button id="b1">Read More</button>
     </div>
+    <div> -->
     <div>
-        <h1 id="tit">your success is <br> our business</h1>
+        <section id="left">
+            <text id="t1">get</text> <br>
+            <text id="t2">study</text><br>
+            <text id="t3">abroad</text><br>
+             <p id="t4">Kites Immigration offers a window solution to growing needs of each family. Covering every area of Student
+                visa, Immigration & Visitor Visa - offering better guidance for further studies to permanent settlement(PR)
+                in foreign countries.</p>
+        </section>
+    </div>
+    <!-- <h1 id="tit">your success is <br> our business</h1>
     </div>
     <div>
         <h2 id="au">About Us</h2>
@@ -43,4 +51,4 @@
     </div>
 </body>
 
-</html>
+</html> -->
