--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
     <div class="flex-container">
         <img src="https://kitesimmigration.com/images/logo.png" alt="logo" width="250px" id="logo">
         <ul id="nav">
@@ -21,25 +22,23 @@
         </ul>
     </div>
 
-    <!-- <div id="t4"> -->
-    <!-- Kites Immigration offers a window solution to growing needs of each family. Covering every area of Student
-        visa, Immigration & Visitor Visa - offering better guidance for further studies to permanent settlement(PR)
-        in foreign countries.
-    </div>
-    <div>
-        <button id="b1">Read More</button>
-    </div>
-    <div> -->
-    <div>
-        <section id="left">
+    <div id="main">
+        <div id="left">
             <text id="t1">get</text> <br>
             <text id="t2">study</text><br>
             <text id="t3">abroad</text><br>
-             <p id="t4">Kites Immigration offers a window solution to growing needs of each family. Covering every area of Student
-                visa, Immigration & Visitor Visa - offering better guidance for further studies to permanent settlement(PR)
+            <p id="t4">Kites Immigration offers a window solution to growing needs of each family. Covering every
+                area of Student
+                visa, Immigration & Visitor Visa - offering better guidance for further studies to permanent
+                settlement(PR)
                 in foreign countries.</p>
-        </section>
+            <button id="b1">Read More</button>
+        </div>
+        <div id="right">
+            <img src="https://kitesimmigration.com/images/banner.jpg" alt="img" id="a1">
+        </div>
     </div>
+    <!-- <div> -->
     <!-- <h1 id="tit">your success is <br> our business</h1>
     </div>
     <div>
