--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <img src="https://kitesimmigration.com/images/banner.jpg" alt="img" id="a1">
         </div>
     </div>
-    <!-- <div> -->
-    <!-- <h1 id="tit">your success is <br> our business</h1>
+    <div>
+        <h1 id="tit">your success is <br> our business</h1>
     </div>
     <div>
         <h2 id="au">About Us</h2>
@@ -50,4 +50,4 @@
     </div>
 </body>
 
-</html> -->
+</html>
