--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             numerous clients in the areas like Student visa, immigration, permanent settlement or just a visting to
             foreign countries.</div>
     </div>
+
+    <div>
+        
+    </div>
 </body>
 
 </html>
