--- a/boxs.html
+++ b/boxs.html
@@ -10,7 +10,15 @@
 
 <body>
     <div id="box1">
-        <h1 id="head">Student Visa</h1>
+        <div id="left1">
+            <h1 id="head">Student Visa</h1>
+            <text id="no">1.</text>
+            <p id="a2">
+                We provide path-way to students to study abroad over 100+ Governmnet Approved Colleges/Universities
+                Worldwide.
+            </p>
+            <button id="b2">Read More</button>
+        </div>
     </div>
 </body>
 
