--- a/boxs.html
+++ b/boxs.html
@@ -19,6 +19,37 @@
             </p>
             <button id="b2">Read More</button>
         </div>
+        <div id="right1">
+            <img src="https://kitesimmigration.com/images/service-img-home-4.png" alt="img">
+        </div>
+    </div>
+    <div id="box2">
+        <div id="left2">
+            <h1 id="head">Student Visa</h1>
+            <text id="no">1.</text>
+            <p id="a2">
+                We provide path-way to students to study abroad over 100+ Governmnet Approved Colleges/Universities
+                Worldwide.
+            </p>
+            <button id="b2">Read More</button>
+        </div>
+        <div id="right1">
+            <img src="https://kitesimmigration.com/images/service-img-home-4.png" alt="img">
+        </div>
+    </div>
+    <div id="box1">
+        <div id="left1">
+            <h1 id="head">Student Visa</h1>
+            <text id="no">1.</text>
+            <p id="a2">
+                We provide path-way to students to study abroad over 100+ Governmnet Approved Colleges/Universities
+                Worldwide.
+            </p>
+            <button id="b2">Read More</button>
+        </div>
+        <div id="right1">
+            <img src="https://kitesimmigration.com/images/service-img-home-4.png" alt="img">
+        </div>
     </div>
 </body>
 
