--- a/boxs.html
+++ b/boxs.html
@@ -23,34 +23,33 @@
             <img src="https://kitesimmigration.com/images/service-img-home-4.png" alt="img">
         </div>
     </div>
+
     <div id="box2">
         <div id="left2">
-            <h1 id="head">Student Visa</h1>
-            <text id="no">1.</text>
-            <p id="a2">
-                We provide path-way to students to study abroad over 100+ Governmnet Approved Colleges/Universities
-                Worldwide.
+            <h1 id="head">Immigration</h1>
+            <text id="no">2.</text>
+            <p id="a3">
+                Willing to settle Abroad? Get the Right Suggestion and Guidance to make a New Living Possible Overseas.
+                We offer guidance to clients to settle in foreign countries like CAN, AUS, NZ, USA with various
+                Programs.
             </p>
             <button id="b2">Read More</button>
         </div>
-        <div id="right1">
-            <img src="https://kitesimmigration.com/images/service-img-home-4.png" alt="img">
+        <div id="right2">
+            <img src="https://kitesimmigration.com/images/service-img-home-2.png" alt="img">
         </div>
     </div>
-    <div id="box1">
-        <div id="left1">
-            <h1 id="head">Student Visa</h1>
-            <text id="no">1.</text>
-            <p id="a2">
-                We provide path-way to students to study abroad over 100+ Governmnet Approved Colleges/Universities
-                Worldwide.
-            </p>
-            <button id="b2">Read More</button>
-        </div>
-        <div id="right1">
-            <img src="https://kitesimmigration.com/images/service-img-home-4.png" alt="img">
-        </div>
-    </div>
-</body>
 
-</html>
+    <div id="box3">
+        <div id="left3">
+            <h1 id="head">Visitor Visa</h1>
+            <text id="no">3.</text>
+            <p id="a3">
+                Travel Visas are required to gain entry to most countries around the world.For instance, you will need a visa to USA, Canada,England, Australia, and Middle East, just to name a few of the popular destinations.
+            </p>
+            <button id="b2">Read More</button>
+        </div>
+        <div id="right3">
+            <img src="https://kitesimmigration.com/images/service-img-home-3.png" alt="img">
+        </div>
+    </div>
