--- a/sec3.html
+++ b/sec3.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="sec3.css">
 </head>
+
 <body>
-    <h1 id="fl">our commitment <br>to make your visa</h1>
-    <h2 id="sl">why us</h2>
+    <div id="main1">
+        <!-- <img src="https://media1.giphy.com/media/0p83n7lR4Rsj0gEiza/giphy.gif?cid=6c09b952r7nl5un4pau3g8tngqjth4kon3jn7y5r83xekgwf&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=s" alt="gif" id="gif"> -->
+        <h1 id="fl">our commitment <br>to make your visa</h1>
+        <h2 id="sl">why us</h2>
+    </div>
+    <div id="main2">
+        <div id="part1">
+            <h3 id="a4">Experience <br>Consultant</h3>
+        </div>
+    </div>
 </body>
+
 </html>
