--- a/sec3.html
+++ b/sec3.html
@@ -16,7 +16,7 @@
     </div>
     <div id="main2">
         <div id="part1">
-            <h3 id="a4">Experience <br>Consultant</h3>
+            <h3 id="a4">Experience Consultant</h3>
         </div>
     </div>
 </body>
