--- a/sec3.html
+++ b/sec3.html
@@ -16,7 +16,8 @@
     </div>
     <div id="main2">
         <div id="part1">
-            <h3 id="a4">Experience Consultant</h3>
+            <h3 id="a4"> <span style="text-decoration: overline;">Experience </span><br> Consultant </h3>
+             <span id="c1">The world is full of opportunities for everyone. Whether you are a professional, student or a businessman, there are lots of opportunities and benefits abroad. Our counselor’s help you prepare for the study, settle or visit to the foreign countries. The process for visas is been rightly assisted by our team of experts.</span>
         </div>
     </div>
 </body>
