--- a/sec3.html
+++ b/sec3.html
@@ -15,9 +15,17 @@
         <h2 id="sl">why us</h2>
     </div>
     <div id="main2">
-        <div id="part1">
+        <div class="parts">
             <h3 id="a4"> <span style="text-decoration: overline;">Experience </span><br> Consultant </h3>
-             <span id="c1">The world is full of opportunities for everyone. Whether you are a professional, student or a businessman, there are lots of opportunities and benefits abroad. Our counselor’s help you prepare for the study, settle or visit to the foreign countries. The process for visas is been rightly assisted by our team of experts.</span>
+             <p id="c1">The world is full of opportunities for everyone. Whether you are a professional, student or a businessman, there are lots of opportunities and benefits abroad. Our counselor’s help you prepare for the study, settle or visit to the foreign countries. The process for visas is been rightly assisted by our team of experts.</p>
+        </div>
+        <div class="parts">
+            <h3 id="a5"> <span style="text-decoration: overline;">Selection </span><br>  of Program </h3>
+             <p id="c2">When you plan to study abroad, selecting the right course is very important. Our counselors will help you shortlist the course you wish to study according to your Personal, Academic Profile and Financial criteria. Our counselors will shortlist a number of suitable institutions after evaluating your profile.</p>
+        </div>
+         <div class="parts">
+            <h3 id="a6"> <span style="text-decoration: overline;">Experience </span><br> Consultant </h3>
+             <p id="c3">We provide complete guidance on Educational Loans offered by Financial Institute and Banks. We also provide updates information to students about the various International scholarships. We also guide you for an Education Loan for college fees, books and accommodation.</p>
         </div>
     </div>
 </body>
