--- a/sec3.html
+++ b/sec3.html
@@ -24,7 +24,7 @@
              <p id="c2">When you plan to study abroad, selecting the right course is very important. Our counselors will help you shortlist the course you wish to study according to your Personal, Academic Profile and Financial criteria. Our counselors will shortlist a number of suitable institutions after evaluating your profile.</p>
         </div>
          <div class="parts">
-            <h3 id="a6"> <span style="text-decoration: overline;">Experience </span><br> Consultant </h3>
+            <h3 id="a6"> <span style="text-decoration: overline;">Finance </span><br> Assistance </h3>
              <p id="c3">We provide complete guidance on Educational Loans offered by Financial Institute and Banks. We also provide updates information to students about the various International scholarships. We also guide you for an Education Loan for college fees, books and accommodation.</p>
         </div>
     </div>
