--- a/sec3.html
+++ b/sec3.html
@@ -51,10 +51,8 @@
                 Accommodation Assistance.</p>
         </div>
         <div class="parts">
-            <h3 id="a9"> <span style="text-decoration: overline;">Foreign </span><br> Exchangeki Assistance</h3>
-            <p id="c6">We provide complete guidance on Educational Loans offered by Financial Institute and Banks. We
-                also provide updates information to students about the various International scholarships. We also guide
-                you for an Education Loan for college fees, books and accommodation.</p>
+            <h3 id="a9"> <span style="text-decoration: overline;">Foreign </span><br> Exchange Assistance</h3>
+            <p id="c6">We have an association with reputed foreign exchange dealers in order to avail quick services and competitive exchange rates. We also guide you with wire transfers, currency exchange, international debit cards and demand drafts. Insurance: We assist for student travel insurance, medical insurance, loss and accident insurance (combined and lower than international rates).</p>
         </div>
     </div>
 </body>
