--- a/sec3.html
+++ b/sec3.html
@@ -38,7 +38,7 @@
     </div>
     <div class="main2">
         <div class="parts">
-            <h3 id="a7"> <span style="text-decoration: overline;">Pre-departure</span><br>& support </h3>
+            <h3 id="a7"> <span style="text-decoration: overline;">Pre-</span><br> departure & support </h3>
             <p id="c4">After visa is granted, we offer pre-departure briefing sessions to all our students. It is an
                 informal session to educate them about various characteristics of the study destination. The session
                 gives them an opportunity to clarify last minute queries and get tips to ease their studying abroad.</p>
@@ -52,7 +52,10 @@
         </div>
         <div class="parts">
             <h3 id="a9"> <span style="text-decoration: overline;">Foreign </span><br> Exchange Assistance</h3>
-            <p id="c6">We have an association with reputed foreign exchange dealers in order to avail quick services and competitive exchange rates. We also guide you with wire transfers, currency exchange, international debit cards and demand drafts. Insurance: We assist for student travel insurance, medical insurance, loss and accident insurance (combined and lower than international rates).</p>
+            <p id="c6">We have an association with reputed foreign exchange dealers in order to avail quick services and
+                competitive exchange rates. We also guide you with wire transfers, currency exchange, international
+                debit cards and demand drafts. Insurance: We assist for student travel insurance, medical insurance,
+                loss and accident insurance (combined and lower than international rates).</p>
         </div>
     </div>
 </body>
