--- a/sec3.html
+++ b/sec3.html
@@ -9,53 +9,64 @@
 </head>
 
 <body>
-    <div id="main1">
-        <!-- <img src="https://media1.giphy.com/media/0p83n7lR4Rsj0gEiza/giphy.gif?cid=6c09b952r7nl5un4pau3g8tngqjth4kon3jn7y5r83xekgwf&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=s" alt="gif" id="gif"> -->
-        <h1 id="fl">our commitment <br>to make your visa</h1>
-        <h2 id="sl">why us</h2>
-    </div>
-    <div class="main2">
-        <div class="parts">
-            <h3 id="a4"> <span style="text-decoration: overline;">Experience </span><br> Consultant </h3>
-            <p id="c1">The world is full of opportunities for everyone. Whether you are a professional, student or a
-                businessman, there are lots of opportunities and benefits abroad. Our counselor’s help you prepare for
-                the study, settle or visit to the foreign countries. The process for visas is been rightly assisted by
-                our team of experts.</p>
+    <div class="main3">
+        <div id="main1">
+            <!-- <img src="https://media1.giphy.com/media/0p83n7lR4Rsj0gEiza/giphy.gif?cid=6c09b952r7nl5un4pau3g8tngqjth4kon3jn7y5r83xekgwf&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=s" alt="gif" id="gif"> -->
+            <h1 id="fl">our commitment <br>to make your visa</h1>
+            <h2 id="sl">why us</h2>
         </div>
-        <div class="parts">
-            <h3 id="a5"> <span style="text-decoration: overline;">Selection </span><br> of Program </h3>
-            <p id="c2">When you plan to study abroad, selecting the right course is very important. Our counselors will
-                help you shortlist the course you wish to study according to your Personal, Academic Profile and
-                Financial criteria. Our counselors will shortlist a number of suitable institutions after evaluating
-                your profile.</p>
+        <div class="main2">
+            <div class="parts">
+                <h3 id="a4"> <span style="text-decoration: overline;">Experience </span><br> Consultant </h3>
+                <p id="c1">The world is full of opportunities for everyone. Whether you are a professional, student or a
+                    businessman, there are lots of opportunities and benefits abroad. Our counselor’s help you prepare
+                    for
+                    the study, settle or visit to the foreign countries. The process for visas is been rightly assisted
+                    by
+                    our team of experts.</p>
+            </div>
+            <div class="parts">
+                <h3 id="a5"> <span style="text-decoration: overline;">Selection </span><br> of Program </h3>
+                <p id="c2">When you plan to study abroad, selecting the right course is very important. Our counselors
+                    will
+                    help you shortlist the course you wish to study according to your Personal, Academic Profile and
+                    Financial criteria. Our counselors will shortlist a number of suitable institutions after evaluating
+                    your profile.</p>
+            </div>
+            <div class="parts">
+                <h3 id="a6"> <span style="text-decoration: overline;">Finance </span><br> Assistance </h3>
+                <p id="c3">We provide complete guidance on Educational Loans offered by Financial Institute and Banks.
+                    We
+                    also provide updates information to students about the various International scholarships. We also
+                    guide
+                    you for an Education Loan for college fees, books and accommodation.</p>
+            </div>
         </div>
-        <div class="parts">
-            <h3 id="a6"> <span style="text-decoration: overline;">Finance </span><br> Assistance </h3>
-            <p id="c3">We provide complete guidance on Educational Loans offered by Financial Institute and Banks. We
-                also provide updates information to students about the various International scholarships. We also guide
-                you for an Education Loan for college fees, books and accommodation.</p>
-        </div>
-    </div>
-    <div class="main2">
-        <div class="parts">
-            <h3 id="a7"> <span style="text-decoration: overline;">Pre-</span><br> departure & support </h3>
-            <p id="c4">After visa is granted, we offer pre-departure briefing sessions to all our students. It is an
-                informal session to educate them about various characteristics of the study destination. The session
-                gives them an opportunity to clarify last minute queries and get tips to ease their studying abroad.</p>
-        </div>
-        <div class="parts">
-            <h3 id="a8"> <span style="text-decoration: overline;">Travel </span><br>Assistance</h3>
-            <p id="c5">While travelling to study abroad it is important to be prepared well in advance and identify the
-                most cost effective route for flights. We not only assist students with admissions for further education
-                but also make sure that they are aware and well informed of all the steps from application to their
-                Accommodation Assistance.</p>
-        </div>
-        <div class="parts">
-            <h3 id="a9"> <span style="text-decoration: overline;">Foreign </span><br> Exchange Assistance</h3>
-            <p id="c6">We have an association with reputed foreign exchange dealers in order to avail quick services and
-                competitive exchange rates. We also guide you with wire transfers, currency exchange, international
-                debit cards and demand drafts. Insurance: We assist for student travel insurance, medical insurance,
-                loss and accident insurance (combined and lower than international rates).</p>
+        <div class="main2">
+            <div class="parts">
+                <h3 id="a7"> <span style="text-decoration: overline;">Pre-</span><br> departure & support </h3>
+                <p id="c4">After visa is granted, we offer pre-departure briefing sessions to all our students. It is an
+                    informal session to educate them about various characteristics of the study destination. The session
+                    gives them an opportunity to clarify last minute queries and get tips to ease their studying abroad.
+                </p>
+            </div>
+            <div class="parts">
+                <h3 id="a8"> <span style="text-decoration: overline;">Travel </span><br>Assistance</h3>
+                <p id="c5">While travelling to study abroad it is important to be prepared well in advance and identify
+                    the
+                    most cost effective route for flights. We not only assist students with admissions for further
+                    education
+                    but also make sure that they are aware and well informed of all the steps from application to their
+                    Accommodation Assistance.</p>
+            </div>
+            <div class="parts">
+                <h3 id="a9"> <span style="text-decoration: overline;">Foreign </span><br> Exchange Assistance</h3>
+                <p id="c6">We have an association with reputed foreign exchange dealers in order to avail quick services
+                    and
+                    competitive exchange rates. We also guide you with wire transfers, currency exchange, international
+                    debit cards and demand drafts. Insurance: We assist for student travel insurance, medical insurance,
+                    loss and accident insurance (combined and lower than international rates).</p>
+            </div>
         </div>
     </div>
 </body>
