--- a/sec4.html
+++ b/sec4.html
@@ -12,6 +12,20 @@
     <div id="main4">
         <h1 id="tl">the engine <br>behind visa</h1>
         <img src="https://kitesimmigration.com/images/woman.png" alt="img" id="p1">
+        <h3 id="d"> <span style="text-decoration: overline;">a team </span> of experts </h3>
+        <p id="d1">
+            Our certified counselors are expert in guiding students to make their choice of course and country of study.
+            They assist the students by providing authentic information, by making the different options available to
+            them and by helping choose the right course. Choosing the right course/program is critical. With the
+            knowledge & experience our counselors have, we guide you to the right university considering your needs.
+            Most institutions have their specific requirements for an application. Our team strictly follows these
+            guidelines to ensure higher success and faster response. We help you prepare answers to questions that
+            universities are probably going to inquire. These mock interview sessions are conducted by our experts who
+            are well known with the type of questions that universities generally ask. We assist you through the
+            complete Visa process like filling online/offline applications; preparing financial documents, check all
+            visa documents to avoid unnecessary delay or rejection and also guide and train for Visa interviews and much
+            more.
+        </p>
     </div>
 </body>
 
