--- a/sec4.html
+++ b/sec4.html
@@ -29,30 +29,51 @@
         <div id="main5">
             <h3 id="d2"> Universities <br>we are offering</h3>
             <div id="img">
-                <img src="https://kitesimmigration.com/images/client-1.png" alt="i1" id="p2">
-                <img src="https://kitesimmigration.com/images/client-2.png" alt="i2" id="p3">
-                <img src="https://kitesimmigration.com/images/client-3.png" alt="i3" id="p4">
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/aafcdf4a-2e6f-4734-b69a-d45abbd48610/UCD.png?w=1920&q=75&lossless=true&auto=format"
-                    alt="i4" id="p5">
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/65a23c40-4933-4b68-b5d9-ff74f968f851/aberdeen.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i5" id="p6">
+                
+                <a href="https://uwaterloo.ca/" target="_blank"> <img
+                        src="https://kitesimmigration.com/images/client-1.png" alt="i1" class="p2"></a>
+
+                <a href="https://www.cbu.ca/" target="_blank"> <img
+                        src="https://kitesimmigration.com/images/client-2.png" alt="i2" class="p2"></a>
+
+                <a href="https://en.wikipedia.org/wiki/Quest_University"><img
+                        src="https://kitesimmigration.com/images/client-3.png" alt="i3" class="p2"></a>
+
+                <a href="https://www.dublinisc.com/"> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/aafcdf4a-2e6f-4734-b69a-d45abbd48610/UCD.png?w=1920&q=75&lossless=true&auto=format"
+                        alt="i4" class="p2"></a>
+
+                <a href="https://www.aberdeen-isc.ac.uk/"> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/65a23c40-4933-4b68-b5d9-ff74f968f851/aberdeen.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i5" class="p2"></a>
+
                 <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/4e083874-9c1d-47c2-b17e-c2bfcb632693/durham.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i5" id="p6">
+                    alt="i5" class="p2">
                 <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/7306bb6f-a21f-4801-bd60-73ed34de6c85/cardiff.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i6">
+                    alt="i6" class="p2">
                 <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/a1077874-9e1e-4c85-90c5-d601c52f7350/huddersfield.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i7">
+                    alt="i7" class="p2">
                 <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/78953b09-36f1-4f0c-902b-d256b2759237/kingston.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i8">
+                    alt="i8" class="p2">
                 <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/10bff8c3-f5c9-4e8e-8700-2fb6383fdff2/leedsbeckett.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i9">
+                    alt="i9" class="p2">
                 <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/6f4f40b1-181b-414e-adc0-93e47f3bbaa6/sussex.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i10">
+                    alt="i10" class="p2">
                 <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/0fbe5b6c-8bdb-401f-befc-98eed536218d/rhul.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i11">
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/74f63e45-6a84-45e9-a5d8-29875539400f/Surrey23-resize.svg?w=1920&q=75&lossless=true&auto=format" alt="i12">
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/26e35e31-2180-4a8e-a06c-3c06dc7f000b/TEE_Logo_Black_159489.png?w=1920&q=75&lossless=true&auto=format" alt="i13">
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/c531ce33-bc53-4cf5-8fa3-9cc4912397b3/CSUSM.svg?w=1920&q=75&lossless=true&auto=format" alt="i14">
+                    alt="i11" class="p2">
+                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/74f63e45-6a84-45e9-a5d8-29875539400f/Surrey23-resize.svg?w=1920&q=75&lossless=true&auto=format"
+                    alt="i12" class="p2">
+                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/26e35e31-2180-4a8e-a06c-3c06dc7f000b/TEE_Logo_Black_159489.png?w=1920&q=75&lossless=true&auto=format"
+                    alt="i13" class="p2">
+                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/c531ce33-bc53-4cf5-8fa3-9cc4912397b3/CSUSM.svg?w=1920&q=75&lossless=true&auto=format"
+                    alt="i14" class="p2">
+                <img src="https://kitesimmigration.com/images/logos/us/ljmu.svg" alt="i15" class="p2">
+                <img src="https://kitesimmigration.com/images/logos/studygroup-logo.svg" alt="i16" class="p2">
+                <img src="https://kitesimmigration.com/images/logos/north%20america/towson.svg" alt="i17" class="p2">
+                <img src="https://kitesimmigration.com/images/logos/north%20america/fau-24.svg" alt="i18" class="p2">
+                <img src="https://kitesimmigration.com/images/logos/north%20america/wwu.svg" alt="i19" class="p2">
+
+
 
             </div>
         </div>
