--- a/sec4.html
+++ b/sec4.html
@@ -47,12 +47,18 @@
                         src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/65a23c40-4933-4b68-b5d9-ff74f968f851/aberdeen.svg?w=1920&q=75&lossless=true&auto=format"
                         alt="i5" class="p2"></a>
 
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/4e083874-9c1d-47c2-b17e-c2bfcb632693/durham.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i5" class="p2">
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/7306bb6f-a21f-4801-bd60-73ed34de6c85/cardiff.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i6" class="p2">
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/a1077874-9e1e-4c85-90c5-d601c52f7350/huddersfield.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i7" class="p2">
+                <a href="https://www.durhamisc.com/" target="_blank"> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/4e083874-9c1d-47c2-b17e-c2bfcb632693/durham.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i5" class="p2"></a>
+
+                <a href="https://isc.cardiff.ac.uk/" target="_blank"> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/7306bb6f-a21f-4801-bd60-73ed34de6c85/cardiff.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i6" class="p2"></a>
+
+                <a href="https://www.huddersfieldisc.com/" target="_blank"><img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/a1077874-9e1e-4c85-90c5-d601c52f7350/huddersfield.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i7" class="p2"></a>
+                        
                 <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/78953b09-36f1-4f0c-902b-d256b2759237/kingston.svg?w=1920&q=75&lossless=true&auto=format"
                     alt="i8" class="p2">
                 <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/10bff8c3-f5c9-4e8e-8700-2fb6383fdff2/leedsbeckett.svg?w=1920&q=75&lossless=true&auto=format"
