--- a/sec4.html
+++ b/sec4.html
@@ -58,26 +58,49 @@
                 <a href="https://www.huddersfieldisc.com/" target="_blank"><img
                         src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/a1077874-9e1e-4c85-90c5-d601c52f7350/huddersfield.svg?w=1920&q=75&lossless=true&auto=format"
                         alt="i7" class="p2"></a>
-                        
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/78953b09-36f1-4f0c-902b-d256b2759237/kingston.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i8" class="p2">
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/10bff8c3-f5c9-4e8e-8700-2fb6383fdff2/leedsbeckett.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i9" class="p2">
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/6f4f40b1-181b-414e-adc0-93e47f3bbaa6/sussex.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i10" class="p2">
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/0fbe5b6c-8bdb-401f-befc-98eed536218d/rhul.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i11" class="p2">
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/74f63e45-6a84-45e9-a5d8-29875539400f/Surrey23-resize.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i12" class="p2">
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/26e35e31-2180-4a8e-a06c-3c06dc7f000b/TEE_Logo_Black_159489.png?w=1920&q=75&lossless=true&auto=format"
+
+                <a href="https://www.kingstonisc.com/"> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/78953b09-36f1-4f0c-902b-d256b2759237/kingston.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i8" class="p2"></a>
+
+                <a href="https://isc.leedsbeckett.ac.uk/" target="_blank"><img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/10bff8c3-f5c9-4e8e-8700-2fb6383fdff2/leedsbeckett.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i9" class="p2"></a>
+
+                <a href="https://isc.sussex.ac.uk/" target="_blank"> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/6f4f40b1-181b-414e-adc0-93e47f3bbaa6/sussex.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i10" class="p2"></a>
+
+                <a href="https://www.rhulisc.com/" target="_blank"><img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/0fbe5b6c-8bdb-401f-befc-98eed536218d/rhul.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i11" class="p2"></a>
+
+                <a href=""> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/74f63e45-6a84-45e9-a5d8-29875539400f/Surrey23-resize.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i12" class="p2"></a>
+
+                <a href=""></a> <img
+                    src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/26e35e31-2180-4a8e-a06c-3c06dc7f000b/TEE_Logo_Black_159489.png?w=1920&q=75&lossless=true&auto=format"
                     alt="i13" class="p2">
-                <img src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/c531ce33-bc53-4cf5-8fa3-9cc4912397b3/CSUSM.svg?w=1920&q=75&lossless=true&auto=format"
-                    alt="i14" class="p2">
-                <img src="https://kitesimmigration.com/images/logos/us/ljmu.svg" alt="i15" class="p2">
-                <img src="https://kitesimmigration.com/images/logos/studygroup-logo.svg" alt="i16" class="p2">
-                <img src="https://kitesimmigration.com/images/logos/north%20america/towson.svg" alt="i17" class="p2">
-                <img src="https://kitesimmigration.com/images/logos/north%20america/fau-24.svg" alt="i18" class="p2">
-                <img src="https://kitesimmigration.com/images/logos/north%20america/wwu.svg" alt="i19" class="p2">
+
+                <a href=""> <img
+                        src="https://assets-us-01.kc-usercontent.com/95d47d95-36b6-00af-a24c-b886ecdfc4a2/c531ce33-bc53-4cf5-8fa3-9cc4912397b3/CSUSM.svg?w=1920&q=75&lossless=true&auto=format"
+                        alt="i14" class="p2"></a>
+
+
+                <a href=""><img src="https://kitesimmigration.com/images/logos/us/ljmu.svg" alt="i15" class="p2"></a>
+
+                <a href=""><img src="https://kitesimmigration.com/images/logos/studygroup-logo.svg" alt="i16"
+                        class="p2"></a>
+
+                <a href=""><img src="https://kitesimmigration.com/images/logos/north%20america/towson.svg" alt="i17"
+                        class="p2"></a>
+
+                <a href=""><img src="https://kitesimmigration.com/images/logos/north%20america/fau-24.svg" alt="i18"
+                        class="p2"></a>
+
+                <a href=""><img src="https://kitesimmigration.com/images/logos/north%20america/wwu.svg" alt="i19"
+                        class="p2"></a>
 
 
 
